# algo-trading-agent

./: .env.example  .gitignore  LLM_PROVIDERS.md  main.py  pyproject.toml  run_llm_backtest.py  status.py
agents/: execution_agent.py  groq_portfolio_manager.py  llm_base.py  llm_portfolio_manager.py  market_analyst.py  orchestrator.py  portfolio_agent.py  risk_agent.py  sentiment_agent.py  strategy_selector.py
auth/: auto_login.py  debug_login.py  kite_auth.py
backtesting/: backtrader_runner.py  benchmark_comparison.py  report_generator.py  strategy_backtester.py  vectorbt_runner.py  walk_forward.py
config/: instruments.py  risk_params.yaml  risk_params_loader.py  settings.py  strategy_params.yaml  universes.py
data/: cache.py  historical.py  kite_client.py  macro_fetcher.py  market_data.py  news_fetcher.py  universe_filter.py  yfinance_historical.py
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md  RISK_MANAGEMENT.md  RND_DECISIONS.md  STRATEGIES.md  TECH_STACK.md  production_roadmap_summary.md  research_ai_trading_best_practices.md  session_findings_april2026.md
execution/: fill_tracker.py  kite_executor.py  order_manager.py  paper_simulator.py
monitoring/: alerting.py  audit_trail.py  benchmark_tracker.py  logger.py
risk/: portfolio_allocator.py  portfolio_state.py  position_sizer.py  risk_manager.py
scheduling/: intraday_scheduler.py  market_calendar.py  swing_scheduler.py
signals/: indicators.py  signal_bus.py  signal_combiner.py  signal_model.py
strategies/: base.py  breakout.py  llm_strategy.py  mean_reversion.py  momentum.py  overbought_short.py  oversold_bounce.py  registry.py  sentiment_driven.py
tests/integration/: test_full_pipeline.py
(+5 files in other folders)
